Extend ShopperJWT auth scheme to allow obtaining user credentials JWTs

--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
-    "test": "lerna run test",
     "build": "lerna run build",
+    "test": "lerna run test",
+    "test:debug": "lerna run test:debug",
     "test:integration": "lerna run test:integration",
+    "test:core": "lerna run --scope @commerce-apps/core test:debug",
+    "test:ec": "lerna run --scope @commerce-apps/exchange-connector test:debug",
+    "test:generator": "lerna run --scope commerce-sdk test:debug",
     "publish": "lerna publish prerelease --yes"
   },
   "dependencies": {
