--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/core.xml --exit --require ts-node/register --colors test/**/*.ts",
+    "test:debug": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
