--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -87,6 +87,7 @@
   },
   "devDependencies": {
     "@commerce-apps/exchange-connector": "^1.0.13-alpha.0",
+    "@types/jsonwebtoken": "^8.3.7",
     "cross-env": "^6.0.3",
     "mocha": "^6.2.2",
     "nock": "^11.7.0",
@@ -97,7 +98,6 @@
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
     "dotenv": "~8.2.0",
-    "jsonwebtoken": "~8.5.1",
     "lodash": "~4.17.15",
     "make-fetch-happen": "~7.1.0",
     "node-fetch": "~2.6.0",
