--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "publish": "lerna publish prerelease --yes"
   },
   "dependencies": {
-    "fs-extra": "^8.1.0",
-    "make-fetch-happen": "^7.1.1"
+    "fs-extra": "~8.1.0",
+    "make-fetch-happen": "~7.1.1"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
