Updated packages for colors and timeout

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "pretest": "npm run lint",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --reporter=xunit --reporter-options output=../../reports_integration/core.xml",
-    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register",
+    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --reporter=xunit --reporter-options output=../../reports_integration/core.xml --colors",
+    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --colors",
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
