--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -39,8 +39,8 @@
     "pretest": "npm run lint",
     "lint": "eslint \"**/*.ts\" --quiet --fix",
     "build": "tsc",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --reporter=xunit --reporter-options output=../../reports_integration/exchange-connector.xml",
-    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register"
+    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --colors --reporter=xunit --reporter-options output=../../reports_integration/exchange-connector.xml",
+    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --colors"
   },
   "lint-staged": {
     "*.js": [
