--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -110,17 +110,17 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/gulp": "^4.0.6",
     "@types/gulp-debug": "^2.0.31",
-    "mocha": "^7.0.1",
-    "nyc": "^15.0.0",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
     "gulp-typescript": "^5.0.1",
+    "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-apps/core": "^0.2.0-alpha.1",
+    "@commerce-apps/core": "0.2.0-alpha.1",
     "@commerce-apps/exchange-connector": "^1.0.13-alpha.0",
     "tslib": "^1.10.0",
     "utility-types": "^3.10.0"
