Support for building apis from a targetted deployment

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-apps/exchange-connector",
-  "version": "1.1.0-alpha.1",
+  "version": "1.1.0-alpha.2",
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
@@ -90,6 +90,7 @@
   "dependencies": {
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.4",
+    "chalk": "^3.0.0",
     "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
     "fs-extra": "^8.1.0",
@@ -98,12 +99,14 @@
     "unzipper": "^0.10.5"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/jszip": "^3.1.7",
     "@types/unzipper": "^0.10.1",
-    "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
-    "mocha": "^6.2.2",
+    "jszip": "^3.2.2",
+    "mocha": "^7.0.1",
     "nock": "^11.7.0",
-    "nyc": "^14.1.1"
+    "nyc": "^15.0.0"
   },
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81"
 }
