--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,11 +1,15 @@
 {
   "name": "commerce-sdk",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "description": "Salesforce Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "images",
+    "README.md",
+    "VERSION.md",
+    "LICENSE.txt"
   ],
   "scripts": {
     "pretest": "npm run lint",
@@ -104,9 +108,10 @@
     ]
   },
   "author": "",
-  "license": "BSD 3-Clause",
+  "license": "BSD-3-Clause",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "devDependencies": {
+    "@commerce-apps/exchange-connector": "^1.1.0-alpha.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/gulp": "^4.0.6",
     "@types/gulp-debug": "^2.0.31",
@@ -120,8 +125,7 @@
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-apps/core": "0.2.0-alpha.1",
-    "@commerce-apps/exchange-connector": "^1.0.13-alpha.0",
+    "@commerce-apps/core": "^0.2.0-alpha.2",
     "tslib": "^1.10.0",
     "utility-types": "^3.10.0"
   }
