Fix integration tests and enable them in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,7 @@ jobs:
             - run: npm install
       - run: npm run build
       - run: npm run test
-      # Disabled until tests are fixed
-      # - run: npm run test:integration
+      - run: npm run test:integration
       - store_test_results:
           path: reports
 
@@ -28,8 +27,7 @@ jobs:
             - run: npm install
       - run: npm run build
       - run: npm run test
-      # Disabled until tests are fixed
-      # - run: npm run test:integration
+      - run: npm run test:integration
       - store_test_results:
           path: reports
 
