Updated to build with downloaded apis

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,70 +30,43 @@ jobs:
       - run: npm run test:integration
       - store_test_results:
           path: reports
-  
-  update-apis:
-    working_directory: ~/build_and_publish
-    executor:
-      name: node/default
-      tag: '10.16'
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-      - run: npm run updateApis
+
   publish:
     working_directory: ~/build_and_publish
     executor:
       name: node/default
       tag: '10.16'
     steps:
-      - run: echo Publish commerce_sdk to npm "$EXCHANGE_DOWNLOAD"
       - checkout
-        # Add read/write ssh key's finger print in order to push the tags
-      - add_ssh_keys:
-          fingerprints:
-            - "78:6d:b4:67:eb:35:d4:a0:63:af:c2:32:f1:94:9a:5f"
       - node/with-cache:
           steps:
             - run: npm install
       - run: npm run build
-      - run: echo -e "$GPG_KEY" | gpg --import
-      - run: git config --global user.email "$GITHUB_PUBLISH_EMAIL"
-      - run: git config --global user.name "$GITHUB_PUBLISH_USER"
-      - run: git config --global user.signingkey $GITHUB_GPG_SIGN_KEY_ID
-      - run: git config --global commit.gpgsign true
       - run:
           name: Create npmrc file to authenticate with npm registry.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-      - run: git status
       - run: npm run publish
-      - run: sudo npm install -g @octokit/rest
-      - run: node .circleci/create_pr.js
-
 workflows:
   version: 2
-  build-and-test:
+          
+  build-test-deploy:
     jobs:
       - build
       - build-12
-  build-test-and-deploy:
-    jobs:
-      - update-apis:
-          filters:
-            branches:
-              only:
-                - /^release.*/
       - hold:
-          type: approval
-          requires:
-            - update-apis
+        filters:
+          tags:
+            only: /^v.*/
+        type: approval
+        requires:
+          - build
+          - build-12
       - publish:
           requires:
             - hold
 
+
 orbs:
   node: circleci/node@1.1
-  release-workflows: 'hutson/library-release-workflows@4.3.3'
 version: 2.1
 
