--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -19,7 +19,8 @@
       "coverage",
       "test",
       "dist",
-      "types"
+      "types",
+      "gulpfile.ts"
     ],
     "reporter": [
       "lcov",
