Changed name of hold job in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ workflows:
     jobs:
       - build
       - build-12
-      - hold:
+      - confirm-publish-if-tagged:
           filters:
             tags:
               only: /^v.*/
