Fixed circle ci requirement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ workflows:
             - build-12
       - publish:
           requires:
-            - hold
+            - confirm-publish-if-tagged
 
 
 orbs:
