Fixed integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,12 @@
 jobs:
   build:
+    environment:
+      COMMERCE_SDK_INPUT_DIR: ./packages/generator/test/raml/valid/
     working_directory: ~/build_only
     executor:
       name: node/default
       tag: '10.16'
+    
     steps:
       - checkout
       - node/with-cache:
@@ -17,6 +20,8 @@ jobs:
 
   build-12:
     working_directory: ~/build_only
+    environment:
+      COMMERCE_SDK_INPUT_DIR: ./packages/generator/test/raml/valid/
     executor:
       name: node/default
       tag: '12.14'
