fixed integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 jobs:
   build:
     environment:
-      COMMERCE_SDK_INPUT_DIR: ./packages/generator/test/raml/valid/
+      COMMERCE_SDK_INPUT_DIR: ./test/raml/valid/
     working_directory: ~/build_only
     executor:
       name: node/default
@@ -21,7 +21,7 @@ jobs:
   build-12:
     working_directory: ~/build_only
     environment:
-      COMMERCE_SDK_INPUT_DIR: ./packages/generator/test/raml/valid/
+      COMMERCE_SDK_INPUT_DIR: ./test/raml/valid/
     executor:
       name: node/default
       tag: '12.14'
