--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,13 +55,20 @@ workflows:
   version: 2
           
   build-test-deploy:
+    filters:
+      tags:
+        ignore: /^v.*/
+    jobs:
+      - build
+      - build-12
+  build-test-deploy:
+    filters:
+      tags:
+        only: /^v.*/
     jobs:
       - build
       - build-12
       - confirm-publish-if-tagged:
-          filters:
-            tags:
-              only: /^v.*/
           type: approval
           requires:
             - build
