Fixed dupe key in circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,7 @@ jobs:
       - run: npm run publish
 workflows:
   version: 2
-          
-  build-test-deploy:
+  build-and-test:
     filters:
       tags:
         ignore: /^v.*/
