Testing more circle configs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,10 +70,14 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+            branches:
+              ignore: /.*/
       - build-12:
           filters:
             tags:
               only: /^v.*/
+            branches:
+              ignore: /.*/
       - confirm-publish-if-tagged:
           type: approval
           requires:
