--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:core": "lerna run --scope @commerce-apps/core test:debug",
     "test:ec": "lerna run --scope @commerce-apps/exchange-connector test:debug",
     "test:generator": "lerna run --scope commerce-sdk test:debug",
-    "publish": "lerna publish from-package --yes"
+    "publish": "lerna publish from-git --yes"
   },
   "dependencies": {
     "fs-extra": "~8.1.0",
