--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,24 +53,39 @@ jobs:
       - run: npm run publish
 workflows:
   version: 2
-  build-and-test-maybe-deploy:
+  build-and-test:
     jobs:
-      - build
-      - build-12
-      - confirm-publish-if-tagged:
-          type: approval
-          requires:
-            - build
-            - build-12
+      - build:
+          filters:
+            tags:
+              ignore: /^v.*/
+      - build-12:
+          filters:
+            tags:
+              ignore: /^v.*/
+  build-test-deploy:
+    jobs:
+      - build:
           filters:
             tags:
               only: /^v.*/
             branches:
               ignore: /.*/
+      - build-12:
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+      - confirm-publish-if-tagged:
+          type: approval
+          requires:
+            - build
+            - build-12
       - publish:
           requires:
             - confirm-publish-if-tagged
-          
+
 
 orbs:
   node: circleci/node@1.1
