Refactor to allow exporting of types and class togetehr without having to use Client

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -15,7 +15,7 @@
     "pretest": "npm run lint",
     "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --timeout 5000 --colors",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --reporter=xunit --reporter-options output=../../reports/generator.xml --colors",
-    "test:integration": "nyc --silent --check-coverage=false cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/generator-integration.xml  --exit --require ts-node/register --colors --timeout 15000 test_integration/**/*.ts",
+    "test:integration": "nyc --extension .ts mocha --forbid-only \"test_integration/**/*.ts\" --require ts-node/register --require source-map-support/register  --colors --reporter=xunit --reporter-options output=../../reports/generator-integration.xml",
     "start": "node dist/index.js",
     "clean": "gulp clean",
     "buildOperationList": "gulp buildOperationList",
