Enable pre-file coverage

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -48,7 +48,8 @@
     "branches": 80,
     "functions": 80,
     "lines": 80,
-    "statements": -10
+    "statements": -10,
+    "per-file": true
   },
   "lint-staged": {
     "*.ts": [
