--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -34,7 +34,8 @@
     "branches": 80,
     "functions": 80,
     "lines": 80,
-    "statements": -10
+    "statements": -10,
+    "per-file": true
   },
   "scripts": {
     "pretest": "npm run lint",
