--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -20,7 +20,9 @@
       "test",
       "dist",
       "types",
-      "gulpfile.ts"
+      "gulpfile.ts",
+      "src/exchangeDirectoryParser.ts",
+      "src/exchangeTools.ts"
     ],
     "reporter": [
       "lcov",
