Exclude dist from test coverage report for generator

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -32,9 +32,10 @@
       "coverage",
       "test",
       "test_integration",
-      "gulpfile.ts",
-      "renderedTemplates",
-      "index.js"
+	  "renderedTemplates",
+	  "dist",
+      "index.js",
+      "gulpfile.ts"
     ],
     "reporter": [
       "lcov",
