Br/test coverage.w 7159033 (#116)
* Enable pre-file coverage

* Exclude uncovered

* Add testing details to README

Co-authored-by: monkey-jeff <jeffreypalbert@gmail.com>

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -20,7 +20,9 @@
       "test",
       "dist",
       "types",
-      "gulpfile.ts"
+      "gulpfile.ts",
+      "src/exchangeDirectoryParser.ts",
+      "src/exchangeTools.ts"
     ],
     "reporter": [
       "lcov",
@@ -34,7 +36,8 @@
     "branches": 80,
     "functions": 80,
     "lines": 80,
-    "statements": -10
+    "statements": -10,
+    "per-file": true
   },
   "scripts": {
     "pretest": "npm run lint",
