Replace exclude with include section

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,10 +19,8 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "coverage",
-      "dist",
-      "test"
+    "include": [
+      "src/**/*.ts"
     ],
     "reporter": [
       "lcov",
