--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -15,12 +15,8 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "coverage",
-      "test",
-      "dist",
-      "types",
-      "gulpfile.ts"
+    "include": [
+      "src/**/*.ts"
     ],
     "reporter": [
       "lcov",
