--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -28,14 +28,8 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "coverage",
-      "test",
-      "test_integration",
-	  "renderedTemplates",
-	  "dist",
-      "index.js",
-      "gulpfile.ts"
+    "include": [
+      "src/**/*.ts"
     ],
     "reporter": [
       "lcov",
