Replace exclude block with include block in package.json for all packages (#117)
* Exclude dist from test coverage report for generator

* Replace exclude with include section

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -15,12 +15,10 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
+    "include": [
+      "src/**/*.ts"
+    ],
     "exclude": [
-      "coverage",
-      "test",
-      "dist",
-      "types",
-      "gulpfile.ts",
       "src/exchangeDirectoryParser.ts",
       "src/exchangeTools.ts"
     ],
