--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -28,13 +28,8 @@
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "coverage",
-      "test",
-      "test_integration",
-      "gulpfile.ts",
-      "renderedTemplates",
-      "index.js"
+    "include": [
+      "src/**/*.ts"
     ],
     "reporter": [
       "lcov",
