--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,13 +4,7 @@
         "outDir": "./dist",
     },
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
-    "exclude": [
-        "node_modules",
-        "release",
-        "test",
-        "gulpfile.ts"
-    ],
-    "include": [
-        "src"
+    "files": [
+        "src/index.ts"
     ]
 }
