--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -2,6 +2,11 @@
   "name": "commerce-sdk",
   "version": "1.3.0-alpha.8",
   "description": "Salesforce Commerce Cloud SDK",
+  "homepage": "https://developer.commercecloud.com/s/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SalesforceCommerceCloud/commerce-sdk"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
