--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-spies": "^1.0.0",
     "chai-string": "^1.5.0",
+    "conditional-type-checks": "^1.0.5",
     "cross-env": "^5.2.0",
     "del": "^5.1.0",
     "eslint": "^6.6.0",
