--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "pretest": "npm run lint",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --reporter=xunit --reporter-options output=../../reports_integration/core.xml --colors",
-    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --colors",
+    "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports_integration/core.xml",
+    "test:debug": "nyc mocha \"test/**/*.test.ts\"",
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
@@ -36,6 +36,14 @@
     "lines": 80,
     "statements": -10,
     "per-file": true
+  },
+  "mocha": {
+    "forbidOnly": true,
+    "require": [
+      "source-map-support/register",
+      "ts-node/register"
+    ],
+    "colors": true
   },
   "lint-staged": {
     "*.js": [
