--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -36,14 +36,21 @@
     "lines": 80,
     "statements": -10,
     "per-file": true
+  },"mocha": {
+    "forbidOnly": true,
+    "require": [
+      "source-map-support/register",
+      "ts-node/register"
+    ],
+    "colors": true
   },
   "scripts": {
     "pretest": "npm run lint",
     "lint": "eslint \"**/*.ts\" --quiet --fix",
     "build": "tsc",
     "updateApis": "gulp updateApis",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --colors --reporter=xunit --reporter-options output=../../reports_integration/exchange-connector.xml",
-    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --colors"
+    "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports_integration/exchange-connector.xml",
+    "test:debug": "nyc mocha \"test/**/*.test.ts\""
   },
   "lint-staged": {
     "*.js": [
