--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -18,9 +18,9 @@
   ],
   "scripts": {
     "pretest": "npm run lint",
-    "test:debug": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --timeout 5000 --colors",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\" --require ts-node/register --require source-map-support/register --reporter=xunit --reporter-options output=../../reports/generator.xml --colors",
-    "test:integration": "nyc --check-coverage=false --extension .ts mocha --forbid-only \"test_integration/**/*.ts\" --require ts-node/register --require source-map-support/register  --colors --reporter=xunit --reporter-options output=../../reports/generator-integration.xml",
+    "test:debug": "nyc mocha \"test/**/*.test.ts\"",
+    "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
+    "test:integration": "nyc --check-coverage=false mocha \"test_integration/**/*.ts\" --reporter=xunit --reporter-options output=../../reports/generator-integration.xml --retries 2 --timeout 5000",
     "start": "node dist/index.js",
     "clean": "gulp clean",
     "buildOperationList": "gulp buildOperationList",
@@ -50,6 +50,14 @@
     "lines": 80,
     "statements": -10,
     "per-file": true
+  },
+  "mocha": {
+    "forbidOnly": true,
+    "require": [
+      "source-map-support/register",
+      "ts-node/register"
+    ],
+    "colors": true
   },
   "lint-staged": {
     "*.ts": [
