--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -20,7 +20,7 @@
     "pretest": "npm run lint",
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
     "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
-    "test:integration": "nyc --check-coverage=false mocha \"test_integration/**/*.ts\" --reporter=xunit --reporter-options output=../../reports/generator-integration.xml --retries 2 --timeout 5000",
+    "test:integration": "nyc --check-coverage=false mocha \"test_integration/**/*.ts\" --retries 2 --timeout 5000 --reporter=xunit --reporter-options output=../../reports/generator-integration.xml",
     "start": "node dist/index.js",
     "clean": "gulp clean",
     "buildOperationList": "gulp buildOperationList",
