--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -102,8 +102,10 @@
   "gitHead": "2a6031f5f57c4ba5df8bfb5c4ca42b2631befe58",
   "dependencies": {
     "@commerce-apps/exchange-connector": "^1.3.0-alpha.9",
+    "@keyv/redis": "^2.1.1",
     "dotenv": "~8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "keyv": "^4.0.0",
     "lodash": "~4.17.15",
     "make-fetch-happen": "~7.1.0",
     "node-fetch": "~2.6.0",
