[jb/test-snyk-runtime] - Sync package-lock.json for core and generator - Add snyk runtime devdependency to core and generator - Require in tests for core, see what happens

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@snyk/nodejs-runtime-agent": "^1.46.0",
     "@types/chai": "^4.2.3",
     "@types/chai-as-promised": "^7.1.2",
     "@types/chai-spies": "^1.0.1",
