--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -92,6 +92,7 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@snyk/nodejs-runtime-agent": "^1.46.0",
     "@types/jsonwebtoken": "^8.3.7",
     "mocha": "^7.0.1",
     "nock": "^11.7.0",
