--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -122,6 +122,7 @@
   "devDependencies": {
     "@commerce-apps/exchange-connector": "^1.3.0-alpha.9",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@snyk/nodejs-runtime-agent": "^1.46.0",
     "@types/gulp": "^4.0.6",
     "@types/gulp-debug": "^2.0.31",
     "chai": "^4.2.0",
