--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,9 @@ jobs:
           steps:
             - run: npm install
       - run: npm run build
-      - run: npm run test
-      - run: npm run test:integration
+      # - run: npm run test
+      # - run: npm run test:integration
+      - run: npm run test:redis
       - store_test_results:
           path: reports
 
