Redis tests fail

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:core": "lerna run --scope @commerce-apps/core test:debug",
     "test:ec": "lerna run --scope @commerce-apps/exchange-connector test:debug",
     "test:generator": "lerna run --scope commerce-sdk test:debug",
+    "test:redis": "lerna run --scope commerce-sdk test:redis",
     "publish": "lerna publish from-git --yes"
   },
   "dependencies": {
