--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-apps/exchange-connector",
-  "version": "1.3.0-alpha.9",
+  "version": "1.3.1-alpha.0",
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
@@ -36,7 +36,8 @@
     "lines": 80,
     "statements": -10,
     "per-file": true
-  },"mocha": {
+  },
+  "mocha": {
     "forbidOnly": true,
     "require": [
       "source-map-support/register",
