Fixed typo and added checkout step for build 12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,15 @@ jobs:
           path: reports
 
   build-12:
-    working_directory: ~/build_only
     environment:
       COMMERCE_SDK_INPUT_DIR: ./test/raml/valid/
+    working_directory: ~/build_only
     executor:
       name: node/default
       tag: '12.14'
+
     steps:
+      - checkout
       - setup_remote_docker
       - run:
           name: Run docker instance
