--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-apps/exchange-connector",
-  "version": "1.3.1-alpha.0",
+  "version": "1.4.0-beta.0",
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
