--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-sdk",
-  "version": "1.3.1-alpha.0",
+  "version": "1.4.0-beta.0",
   "description": "Salesforce Commerce Cloud SDK",
   "homepage": "https://developer.commercecloud.com/s/",
   "repository": {
@@ -120,7 +120,7 @@
   "license": "BSD-3-Clause",
   "gitHead": "2a6031f5f57c4ba5df8bfb5c4ca42b2631befe58",
   "devDependencies": {
-    "@commerce-apps/exchange-connector": "^1.3.1-alpha.0",
+    "@commerce-apps/exchange-connector": "^1.4.0-beta.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/gulp": "^4.0.6",
     "@types/gulp-debug": "^2.0.31",
@@ -134,7 +134,7 @@
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.3.1-alpha.0",
+    "@commerce-apps/core": "^1.4.0-beta.0",
     "tslib": "^1.10.0",
     "utility-types": "^3.10.0"
   }
