--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -17,7 +17,8 @@
     "LICENSE.txt"
   ],
   "scripts": {
-    "pretest": "npm run lint",
+    "depcheck": "depcheck",
+    "pretest": "npm run lint && npm run depcheck",
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
     "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
     "test:integration": "nyc --check-coverage=false mocha \"test_integration/**/*.ts\" --retries 2 --timeout 5000 --reporter=xunit --reporter-options output=../../reports/generator-integration.xml",
@@ -123,19 +124,29 @@
     "@commerce-apps/exchange-connector": "^1.4.0-beta.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/gulp": "^4.0.6",
-    "@types/gulp-debug": "^2.0.31",
     "chai": "^4.2.0",
-    "cross-env": "^6.0.3",
+    "depcheck": "^0.9.2",
     "gulp": "^4.0.2",
-    "gulp-debug": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "mocha": "^7.0.1",
     "nyc": "^15.0.0",
-    "unzipper": "^0.10.5"
+    "tslib": "^1.10.0",
+    "utility-types": "^3.10.0"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.4.0-beta.0",
-    "tslib": "^1.10.0",
-    "utility-types": "^3.10.0"
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "amf-client-js": "^4.0.6",
+    "chai-as-promised": "^7.1.1",
+    "conditional-type-checks": "^1.0.5",
+    "dotenv": "^8.2.0",
+    "fs-extra": "^9.0.0",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0",
+    "lint-staged": "^10.1.3",
+    "lodash": "^4.17.15",
+    "tmp": "^0.1.0",
+    "webapi-parser": "^0.5.0"
   }
 }
