--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -124,6 +124,7 @@
     "qs": "~6.9.1",
     "sinon": "^9.0.2",
     "ssri": "^7.1.0",
-    "tmp": "~0.1.0"
+    "tmp": "~0.1.0",
+    "loglevel": "^1.6.8"
   }
 }
