--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -102,7 +102,12 @@
     "depcheck": "^0.9.2",
     "mocha": "^7.0.1",
     "nock": "^11.7.0",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "chai-as-promised": "^7.1.1",
+    "lint-staged": "^10.1.3",
+    "sinon": "^9.0.2"
   },
   "author": "",
   "license": "BSD-3-Clause",
@@ -110,19 +115,14 @@
   "dependencies": {
     "@commerce-apps/exchange-connector": "^1.4.0-beta.0",
     "@keyv/redis": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "chai-as-promised": "^7.1.1",
     "dotenv": "~8.2.0",
     "ioredis": "^4.16.2",
     "jsonwebtoken": "^8.5.1",
     "keyv": "^4.0.0",
-    "lint-staged": "^10.1.3",
     "lodash": "~4.17.15",
     "make-fetch-happen": "~7.1.0",
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
-    "sinon": "^9.0.2",
     "ssri": "^7.1.0",
     "tmp": "~0.1.0",
     "loglevel": "^1.6.8"
