updateApis shouldn't fail if it's unable to fetch an asset

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -19,8 +19,7 @@
       "src/**/*.ts"
     ],
     "exclude": [
-      "src/exchangeDirectoryParser.ts",
-      "src/exchangeTools.ts"
+      "src/exchangeDirectoryParser.ts"
     ],
     "reporter": [
       "lcov",
@@ -31,9 +30,9 @@
     ],
     "all": true,
     "check-coverage": true,
-    "branches": 80,
-    "functions": 80,
-    "lines": 80,
+    "branches": 85,
+    "functions": 85,
+    "lines": 85,
     "statements": -10,
     "per-file": true
   },
