--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
-    "updateApis": "lerna run updateApis",
+    "updateApis": "lerna run updateApis --stream",
     "build": "lerna run build",
     "test": "lerna run test",
     "test:debug": "lerna run test:debug",
