--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -147,6 +147,7 @@
     "lint-staged": "^10.1.3",
     "lodash": "^4.17.15",
     "tmp": "^0.1.0",
-    "webapi-parser": "^0.5.0"
+    "webapi-parser": "^0.5.0",
+    "loglevel": "^1.6.8"
   }
 }
