--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -108,7 +108,7 @@
   "license": "BSD-3-Clause",
   "gitHead": "2a6031f5f57c4ba5df8bfb5c4ca42b2631befe58",
   "dependencies": {
-    "@commerce-apps/exchange-connector": "^1.4.0-beta.0",
+    "@commerce-apps/raml-toolkit": "^0.2.9",
     "@keyv/redis": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
