--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -121,7 +121,6 @@
   "license": "BSD-3-Clause",
   "gitHead": "2a6031f5f57c4ba5df8bfb5c4ca42b2631befe58",
   "devDependencies": {
-    "@commerce-apps/exchange-connector": "^1.4.0-beta.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/gulp": "^4.0.6",
     "chai": "^4.2.0",
@@ -135,6 +134,7 @@
   },
   "dependencies": {
     "@commerce-apps/core": "^1.4.0-beta.0",
+    "@commerce-apps/raml-toolkit": "^0.2.9",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "amf-client-js": "^4.0.6",
