--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -113,7 +113,7 @@
   "license": "BSD-3-Clause",
   "gitHead": "2a6031f5f57c4ba5df8bfb5c4ca42b2631befe58",
   "dependencies": {
-    "@commerce-apps/exchange-connector": "^1.4.0-beta.0",
+    "@commerce-apps/raml-toolkit": "^0.2.9",
     "@keyv/redis": "^2.1.1",
     "dotenv": "~8.2.0",
     "ioredis": "^4.16.2",
