--- a/packages/generator/tsconfig.json
+++ b/packages/generator/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "exclude": [
         "node_modules",
-        "gulpfile.ts",
+        "gulpfiles",
         "dist"
     ],
     "include": [
