--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 jobs:
   build:
     environment:
-      COMMERCE_SDK_INPUT_DIR: ./test/raml/valid/
+      COMMERCE_SDK_INPUT_DIR: ../test/raml/valid/
     working_directory: ~/build_only
     docker:
       - image: circleci/node:10.16.3
