--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 
   build-12:
     environment:
-      COMMERCE_SDK_INPUT_DIR: ./test/raml/valid/
+      COMMERCE_SDK_INPUT_DIR: ../test/raml/valid/
     working_directory: ~/build_only
     docker:
       - image: circleci/node:12.16.1
