--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
+            - run: npm ci
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
@@ -30,7 +30,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
+            - run: npm ci
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
@@ -46,7 +46,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
+            - run: npm ci
       - run: npm run build
       - run:
           name: Create npmrc file to authenticate with npm registry.
