--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../base.tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist",
+        "resolveJsonModule": true
     },
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "exclude": [
