Fallback to npm install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm ci
+            - run: npm install
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
