--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
+      - run: cd packages/core && npm run build
       - run: npm run build
       - run: npm run test
       - run: npm run test:integration
