--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -99,14 +99,15 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/jsonwebtoken": "^8.3.7",
-    "depcheck": "^0.9.2",
-    "mocha": "^7.0.1",
-    "nock": "^11.7.0",
-    "nyc": "^15.0.0",
+    "@types/retry": "^0.12.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "chai-as-promised": "^7.1.1",
+    "depcheck": "^0.9.2",
     "lint-staged": "^10.1.3",
+    "mocha": "^7.0.1",
+    "nock": "^11.7.0",
+    "nyc": "^15.0.0",
     "sinon": "^9.0.2"
   },
   "author": "",
@@ -120,11 +121,12 @@
     "jsonwebtoken": "^8.5.1",
     "keyv": "^4.0.0",
     "lodash": "~4.17.15",
+    "loglevel": "^1.6.8",
     "make-fetch-happen": "~7.1.0",
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
+    "retry": "^0.12.0",
     "ssri": "^7.1.0",
-    "tmp": "~0.1.0",
-    "loglevel": "^1.6.8"
+    "tmp": "~0.1.0"
   }
 }
