Use require w/o import to avoid TypeScript errors.

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "extends": "../../base.tsconfig.json",
     "compilerOptions": {
-        "outDir": "./dist",
-        "resolveJsonModule": true
+        "outDir": "./dist"
     },
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "exclude": [
