Add debug logs in SDK

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -125,6 +125,7 @@
     "qs": "~6.9.1",
     "ssri": "^7.1.0",
     "tmp": "~0.1.0",
-    "loglevel": "^1.6.8"
+    "loglevel": "^1.6.8",
+    "fetch-to-curl": "^0.3.0"
   }
 }
