Finished refactor, all tests working

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -122,7 +122,7 @@
     "keyv": "^4.0.0",
     "lodash": "~4.17.15",
     "loglevel": "^1.6.8",
-    "make-fetch-happen": "~7.1.0",
+    "make-fetch-happen": "^8.0.4",
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
     "retry": "^0.12.0",
