--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -147,8 +147,9 @@
     "handlebars-helpers": "^0.10.0",
     "lint-staged": "^10.1.3",
     "lodash": "^4.17.15",
+    "loglevel": "^1.6.8",
+    "retry": "^0.12.0",
     "tmp": "^0.1.0",
-    "webapi-parser": "^0.5.0",
-    "loglevel": "^1.6.8"
+    "webapi-parser": "^0.5.0"
   }
 }
