--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-sdk",
-  "version": "1.4.0-beta.0",
+  "version": "1.4.1-beta.0",
   "description": "Salesforce Commerce Cloud SDK",
   "homepage": "https://developer.commercecloud.com/s/",
   "repository": {
@@ -135,7 +135,7 @@
     "utility-types": "^3.10.0"
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.4.0-beta.0",
+    "@commerce-apps/core": "^1.4.1-beta.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "amf-client-js": "^4.0.6",
@@ -147,8 +147,8 @@
     "handlebars-helpers": "^0.10.0",
     "lint-staged": "^10.1.3",
     "lodash": "^4.17.15",
+    "loglevel": "^1.6.8",
     "tmp": "^0.1.0",
-    "webapi-parser": "^0.5.0",
-    "loglevel": "^1.6.8"
+    "webapi-parser": "^0.5.0"
   }
 }
