--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,9 @@
     "test:integration": "npm run test:cache",
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
     "build": "tsc",
-    "lint": "eslint \"**/*.ts\" --quiet --fix"
+    "lint": "eslint \"**/*.ts\" --quiet --fix",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "files": [
     "dist"
@@ -126,6 +128,9 @@
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
     "ssri": "^7.1.0",
-    "tmp": "~0.1.0"
-  }
+    "tmp": "~0.1.0",
+    "loglevel": "^1.6.8",
+    "snyk": "^1.316.1"
+  },
+  "snyk": true
 }
