--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -127,10 +127,9 @@
     "make-fetch-happen": "~7.1.0",
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
+    "snyk": "^1.316.1",
     "ssri": "^7.1.0",
-    "tmp": "~0.1.0",
-    "loglevel": "^1.6.8",
-    "snyk": "^1.316.1"
+    "tmp": "~0.1.0"
   },
   "snyk": true
 }
