--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -150,10 +150,9 @@
     "lint-staged": "^10.1.3",
     "lodash": "^4.17.15",
     "loglevel": "^1.6.8",
+    "snyk": "^1.316.1",
     "tmp": "^0.1.0",
-    "webapi-parser": "^0.5.0",
-    "loglevel": "^1.6.8",
-    "snyk": "^1.316.1"
+    "webapi-parser": "^0.5.0"
   },
   "snyk": true
 }
