--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -76,6 +76,8 @@
     ],
     "plugins": [
       "@typescript-eslint",
+      "@typescript-eslint/eslint-plugin",
+      "eslint-plugin-tsdoc",
       "header"
     ],
     "parserOptions": {
@@ -103,7 +105,8 @@
           " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
           " "
         ]
-      ]
+      ],
+      "tsdoc/syntax": "error"
     },
     "overrides": [
       {
@@ -127,6 +130,7 @@
     "@types/gulp": "^4.0.6",
     "chai": "^4.2.0",
     "depcheck": "^0.9.2",
+    "eslint-plugin-tsdoc": "^0.2.4",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "mocha": "^7.0.1",
