--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -26,7 +26,7 @@
     "clean": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts cleanInputDir",
     "buildOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts buildOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
-    "build": "npm run renderTemplates && tsc && eslint dist/** --quiet --fix",
+    "build": "npm run renderTemplates && tsc && eslint \"dist/**/*\" --quiet --fix",
     "lint": "eslint \"**/*.ts\" --quiet --fix",
     "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis"
   },
