--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -74,13 +74,15 @@
     "extends": [
       "plugin:@typescript-eslint/recommended",
       "prettier/@typescript-eslint",
+      "plugin:jsdoc/recommended",
       "plugin:prettier/recommended"
     ],
     "plugins": [
       "@typescript-eslint",
       "@typescript-eslint/eslint-plugin",
       "eslint-plugin-tsdoc",
-      "header"
+      "header",
+      "jsdoc"
     ],
     "parserOptions": {
       "ecmaVersion": 2018,
@@ -108,6 +110,29 @@
           " "
         ]
       ],
+      "jsdoc/require-description": [
+        "error",
+        {
+          "checkConstructors": false
+        }
+      ],
+      "jsdoc/require-jsdoc": [
+        "error",
+        {
+          "publicOnly": true,
+          "require": {
+            "ArrowFunctionExpression": true,
+            "ClassDeclaration": true,
+            "ClassExpression": true,
+            "FunctionDeclaration": true,
+            "FunctionExpression": true,
+            "MethodDefinition": true
+          }
+        }
+      ],
+      "jsdoc/require-param-name": "error",
+      "jsdoc/require-returns-check": "error",
+      "jsdoc/require-returns-description": "error",
       "tsdoc/syntax": "error"
     },
     "overrides": [
@@ -132,6 +157,7 @@
     "@types/gulp": "^4.0.6",
     "chai": "^4.2.0",
     "depcheck": "^0.9.2",
+    "eslint-plugin-jsdoc": "^25.4.0",
     "eslint-plugin-tsdoc": "^0.2.4",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
