Tweak lint commands

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -26,8 +26,8 @@
     "clean": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts cleanInputDir",
     "buildOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts buildOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
-    "build": "npm run renderTemplates && tsc && eslint \"dist/**/*\" --quiet --fix",
-    "lint": "eslint \"**/*.ts\" --quiet --fix",
+    "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
+    "lint": "eslint . --ext .ts --quiet --fix",
     "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
