Remove unneeded prefix

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -80,7 +80,7 @@
     "plugins": [
       "@typescript-eslint",
       "@typescript-eslint/eslint-plugin",
-      "eslint-plugin-tsdoc",
+      "tsdoc",
       "header",
       "jsdoc"
     ],
