separated npm pack and npm test to solve docker issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ commands:
   test:
     steps:
       - run: npm run test
+      - run: npm run pack:sdk --prefix integration_tests
       - run: npm run test:integration
       - store_test_results:
           path: reports
@@ -51,7 +52,7 @@ jobs:
     steps:
       - build
       - test
-    
+
   build-node-14:
     executor: node-14
     steps:
