Created top level integrationTests package to run tests against a built version of the sdk

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,9 @@ packages/*/dist
 packages/generator/renderedTemplates/
 .vscode
 
-**/*.js
 reports*
 
 .DS_Store
+
+# Local History for Visual Studio
+**/.history
